--- a/Cocoteca.csproj
+++ b/Cocoteca.csproj
@@ -14,6 +14,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Utils" Version="3.1.1" />
+    <PackageReference Include="ServiceStack" Version="5.8.0" />
   </ItemGroup>
 
   <ItemGroup>
