--- a/Cocoteca.csproj
+++ b/Cocoteca.csproj
@@ -5,6 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="wwwroot\imagenes\carrito.png" />
+    <None Include="wwwroot\imagenes\coco.png" />
+    <None Include="wwwroot\imagenes\compra.png" />
+    <None Include="wwwroot\imagenes\imagotipo.png" />
+    <None Include="wwwroot\imagenes\usuario.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
