--- a/Cocoteca/Cocoteca.csproj
+++ b/Cocoteca/Cocoteca.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.3" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
@@ -17,9 +18,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Controllers\Almacenista\" />
     <Folder Include="Models\Cliente\Equipo2\" />
     <Folder Include="Models\Cliente\Equipo3\" />
     <Folder Include="Models\Cliente\Equipo4\" />
+    <Folder Include="Views\Almacenista\" />
   </ItemGroup>
 
 </Project>
