--- a/Cocoteca/appsettings.json
+++ b/Cocoteca/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "“Server=LAPTOP-UOPKI5AA\\MSSQLSERVER01;Database=Cocoteca;Integrated Security=True”",
+    "DefaultConnection": "“Server=HP-CARLO;Database=Cocoteca;Integrated Security=True”",
     "CocotecaContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Cocoteca;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
