--- a/Cocoteca/appsettings.json
+++ b/Cocoteca/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "“Server=LAPTOP-UOPKI5AA\\MSSQLSERVER01;Database=Cocoteca;Integrated Security=True”",
-    "CocotecaContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Cocoteca;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=LAPTOP-UOPKI5AA\\MSSQLSERVER01;Database=Cocoteca;Integrated Security=True",
+    "CocotecaContextConnection": "“Server=LAPTOP-UOPKI5AA\\MSSQLSERVER01;Database=Cocoteca;Integrated Security=True”"
   },
   "Logging": {
     "LogLevel": {
