Ephemeral bug fix

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Cocoteca-1303C21C-9DCF-4C6E-81FD-3182E8FF149C;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultConnection": "Server=DESKTOP-HMU7HLM\\MSSQLSERVER01;Database=Cocoteca;Integrated Security=True",
     "CocotecaContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Cocoteca;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
